--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - ./:/app:rw,cached
+      - ./../:/app:rw,cached
   
   rabbitmq:
     image: rabbitmq:3-management
