--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   php-fpm:
     build: ./php-fpm
-    container_name: app-php-fpm
+    container_name: app_php_fpm
     working_dir: /app
     ports:
       - "9000:9000"
@@ -17,18 +17,16 @@ services:
   
   rabbitmq:
     image: rabbitmq:3-management
-    container_name: app-rabbitmq
+    container_name: app_rabbitmq
     ports:
       - "15672:15672"
       - "5672:5672"
 
   db:
     image: postgres:11
-    container_name: app-db
+    container_name: app_db
     restart: always
-    environment:
-        - POSTGRES_DB=app
-        - POSTGRES_USER=root
-        - POSTGRES_PASSWORD=root
+    env_file:
+      - ../.env
     ports:
-        - 5432:5432
+      - 5432:5432
